--- a/style/main.css
+++ b/style/main.css
@@ -6,8 +6,10 @@
 
 body {
   background-color: hsl(30deg, 38%, 92%);
+}
+
+section {
   height: 100vh;
-  width: 100vw;
   display: grid;
   place-items: center;
 }
@@ -70,7 +72,7 @@ body {
 }
 
 @media (max-width: 375px) {
-  body {
+  section {
     padding: 5%;
   }
   .card .card--img {
