solve Accessibility issues

--- a/style/main.scss
+++ b/style/main.scss
@@ -14,7 +14,7 @@
       background-color: $cream;
   }
 
-  section {
+  main {
       height: 100vh;
       display: grid;
       place-items: center;
@@ -50,7 +50,7 @@
           color: $grayishBlue;
       }
 
-      .card--price-section {
+      .card--price-main {
           display: flex;
           align-items: center;
       }
@@ -88,7 +88,7 @@
 
   //   Mobile device
   @media(max-width:375px) {
-      section {
+      main {
           padding: 5%;
       }
 
