--- a/style/main.css
+++ b/style/main.css
@@ -8,7 +8,7 @@ body {
   background-color: hsl(30deg, 38%, 92%);
 }
 
-section {
+main {
   height: 100vh;
   display: grid;
   place-items: center;
@@ -40,7 +40,7 @@ section {
   font-size: 14px;
   color: hsl(228deg, 12%, 48%);
 }
-.card .card--price-section {
+.card .card--price-main {
   display: flex;
   align-items: center;
 }
@@ -72,7 +72,7 @@ section {
 }
 
 @media (max-width: 375px) {
-  section {
+  main {
     padding: 5%;
   }
   .card .card--img {
