--- a/style/main.css
+++ b/style/main.css
@@ -6,10 +6,11 @@
 
 body {
   background-color: hsl(30deg, 38%, 92%);
+  min-height: 100vh;
 }
 
 main {
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   place-items: center;
 }
@@ -40,7 +41,7 @@ main {
   font-size: 14px;
   color: hsl(228deg, 12%, 48%);
 }
-.card .card--price-main {
+.card .card--price-section {
   display: flex;
   align-items: center;
 }
