--- a/style/main.scss
+++ b/style/main.scss
@@ -12,10 +12,11 @@
 
   body {
       background-color: $cream;
+      min-height: 100vh;
   }
 
   main {
-      height: 100vh;
+      min-height: 100vh;
       display: grid;
       place-items: center;
   }
@@ -50,7 +51,7 @@
           color: $grayishBlue;
       }
 
-      .card--price-main {
+      .card--price-section {
           display: flex;
           align-items: center;
       }
